--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base {
+  @font-face {
+    font-family: 'OpenDyslexic';
+    font-style: normal;
+    font-display: swap;
+    src: url(./assets/OpenDyslexic-Regular.woff2) format('woff2');
+  }
+  @font-face {
+    font-family: 'OpenDyslexic';
+    font-style: bold;
+    font-display: swap;
+    src: url(./assets/OpenDyslexic-Bold.woff2) format('woff2');
+  }
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
