--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -66,11 +66,20 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  /* border-color: #646cff; */
+  background-color: #2a435a;
+
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+button > a {
+  color: #f9f9f9
+}
+button > a:hover {
+  color: #f9f9f9
 }
 
 @media (prefers-color-scheme: dark) {
@@ -82,7 +91,7 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
-    color: #213547;
+    background-color: #213547;
+    color: #f9f9f9;
   }
 }
