--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,6 @@ button {
 button:hover {
   /* border-color: #646cff; */
   background-color: #2a435a;
-
 }
 button:focus,
 button:focus-visible {
@@ -76,10 +75,10 @@ button:focus-visible {
 }
 
 button > a {
-  color: #f9f9f9
+  color: #f9f9f9;
 }
 button > a:hover {
-  color: #f9f9f9
+  color: #f9f9f9;
 }
 
 @media (prefers-color-scheme: dark) {
