--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
